--- a/src/app.html
+++ b/src/app.html
@@ -8,7 +8,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
     %sveltekit.head%
   </head>
-  <body class="font-sans antialiased">
+  <body class="font-sans antialiased surface-page">
     <div style="display: contents">%sveltekit.body%</div>
   </body>
 </html>
